crates/review-buddy/tests/snapshots/refresh_state__offline_banner_afterglow_dark_100x30.snap
---
source: crates/review-buddy/tests/refresh_state.rs
expression: text(& mut app)
---
 review buddy  ·  live · 2 sources · 2 changes  ·  offline · cached 10:42            Afterglow Dark
  1 ● All 2   2 ● work 1   3 ● oss 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Waiting on you · 2                                                                              │
│▌ ● Add retry to sync                                                                          1h │
│▌ GH web#1 · mira · review requested                                                        +4 −2 │
│  ● Fix the flaky upload test                                                                  1h │
│  GH web#2 · mira · review requested                                                        +4 −2 │
│                                                                                                  │
│  ── That's everything.                                                                           │
│  2 in this view.                                                                                 │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ acme/web#1 ─────────────────────────────────────────────────────────────────────────────────── ▼ ╮
│ Add retry to sync                                                                                │
│ mira wants feat → main                                                                           │
│ +4 −2 · 1 file · opened 2h ago                                                                   │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                         │
│  Overview   Files 1   Checks   Conversation                                                      │
│ ────────────────────────────────────╭──────────────────────────────────────────────────────────╮ │
│ Couldn't reach github.com.          │! work: Couldn't reach github.com. Check your connectio…  │ │
│ Check your connection, then press r ╰──────────────────────────────────────────────────────────╯ │
│                                     ╭──────────────────────────────────────────────────────────╮ │
│                                     │! oss: Couldn't reach github.com. Check your connection…  │ │
│                                     ╰──────────────────────────────────────────────────────────╯ │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit                    refreshed 10:42
