crates/review-buddy/tests/snapshots/refresh_state__offline_banner_dusk_160x40.snap
---
source: crates/review-buddy/tests/refresh_state.rs
expression: text(& mut app)
---
 review buddy  ·  live · 2 sources · 2 changes  ·  offline · cached 10:42                                                                                  Dusk
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ acme/web#1 ───────────────────────────────────────────────────────────────────── ⟩ ╮
│▌ ● All               2 ││  Waiting on you · 2                          ││ Add retry to sync                                                                  │
│    every source        ││▌ ● Add retry to sync                      1h ││ mira wants feat → main                                                             │
│  ● work              1 ││▌ GH web#1 · mira · review requested          ││ +4 −2 · 1 file · opened 2h ago                                                     │
│    offline             ││  ● Fix the flaky upload test              1h ││                                                                                    │
│  ● oss               1 ││  GH web#2 · mira · review requested          ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    offline             ││                                              ││                                                                                    │
│                        ││  ── That's everything.                       ││  Overview   Files 1   Checks   Conversation                                        │
│  Show  s to change     ││  2 in this view.                             ││ ────────────────────────────────────────────────────────────────────────────────── │
│  [x] reviewing         ││                                              ││ Couldn't reach github.com.                                                         │
│  [x] assigned          ││                                              ││ Check your connection, then press r to try again.                                  │
│  [x] authored          ││                                              ││                                                                                    │
│  [ ] drafts            ││                                              ││                                                                                    │
│  [ ] noise             ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                       ╭──────────────────────────────────────────────────────────╮ │
│                        ││                                              ││                       │! work: Couldn't reach github.com. Check your connectio…  │ │
│                        ││                                              ││                       ╰──────────────────────────────────────────────────────────╯ │
│                        ││                                              ││                       ╭──────────────────────────────────────────────────────────╮ │
│                        ││                                              ││                       │! oss: Couldn't reach github.com. Check your connection…  │ │
│                        ││                                              ││                       ╰──────────────────────────────────────────────────────────╯ │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit                                                                                refreshed 10:42
